syntax = "proto3";

package ticktrader.algo.server.publicApi;

option csharp_namespace = "TickTrader.Algo.Server.PublicAPI";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "info/package.info.proto";


message Feed {
    enum MarketSide {
        BID = 0;
        ASK = 1;
    }

    enum Timeframe {
        S1 = 0;
        S10 = 1;
        M1 = 2;
        M5 = 3;
        M15 = 4;
        M30 = 5;
        H1 = 6;
        H4 = 7;
        D = 8;
        W = 9;
        M_N = 10;
        TICKS = 11;
        TICKS_LEVEL2 = 12;
        TICKS_VWAP = 13;
    }
}

message BoolParameterConfig {
    string property_id = 1;
    bool value = 2;
}

message Int32ParameterConfig {
    string property_id = 1;
    int32 value = 2;
}

message NullableInt32ParameterConfig {
    string property_id = 1;
    google.protobuf.Int32Value value = 2;
}

message DoubleParameterConfig {
    string property_id = 1;
    double value = 2;
}

message NullableDoubleParameterConfig {
    string property_id = 1;
    google.protobuf.DoubleValue value = 2;
}

message StringParameterConfig {
    string property_id = 1;
    string value = 2;
}

message EnumParameterConfig {
    string property_id = 1;
    string value = 2;
}

message FileParameterConfig {
    string property_id = 1;
    string file_name = 2;
}

message BarToBarInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message BarToDoubleInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message ColoredLineOutputConfig {
    string property_id = 1;
    bool is_enabled = 2;
    uint32 line_color_argb = 3;
    int32 line_thickness = 4;
    Metadata.LineStyle line_style = 5;
}

message MarkerSeriesOutputConfig {
    string property_id = 1;
    bool is_enabled = 2;
    uint32 line_color_argb = 3;
    int32 line_thickness = 4;
    Metadata.MarkerSize marker_size = 5;
}

message SymbolConfig {
    enum SymbolOrigin {
        ONLINE = 0;
        CUSTOM = 1;
        TOKEN = 2;
    }

    string name = 1;
    SymbolOrigin origin = 2;
}

message PluginPermissions {
    bool trade_allowed = 1;
    bool isolated = 2;
}

message PluginConfig {
    PluginKey key = 1;
    Feed.Timeframe timeframe = 2;
    Feed.Timeframe model_timeframe = 3;
    SymbolConfig main_symbol = 4;
    MappingKey selected_mapping = 5;
    string instance_id = 6;
    PluginPermissions permissions = 7;
    repeated google.protobuf.Any properties = 8;
}

message PluginFileInfo {
    string name = 1;
    int64 size = 2;
}

message PluginFolderInfo {
    enum PluginFolderId {
        ALGO_DATA = 0;
        BOT_LOGS = 1;
    }

    string plugin_id = 1;
    PluginFolderId folder_id = 2;
    google.protobuf.StringValue path = 3;
    repeated PluginFileInfo files = 4;
}

message PluginModelInfo {
    enum PluginState {
        STOPPED = 0;
        STARTING = 1;
        FAULTED = 2;
        RUNNING = 3;
        STOPPING = 4;
        BROKEN = 5;
        RECONNECTING = 6;
    }

    string instance_id = 1;
    string account_id = 2;
    PluginState state = 3;
    google.protobuf.StringValue fault_message = 4;
    PluginConfig config = 5;
    PluginDescriptor descriptor = 6;
}